updated Fit3DBuilder.java and Fit3DSiteAlignment.java
introduced exhaustive search option for teh Fit3DSite algorithm